# ab-av1

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: typed_ffmpeg_options.md
proptest-regressions/command/: crf_search.txt
scripts/: clippy-fast
src/: command.rs  ffmpeg.rs  ffprobe.rs  float.rs  main.rs  process.rs  sample.rs  score_stream.rs  temporary.rs  test_support.rs  vmaf.rs  xpsnr.rs
src/command/: args.rs  auto_encode.rs  crf_search.rs  encode.rs  print_completions.rs  rules.rs  sample_encode.rs  vmaf.rs  worker.rs  worker_protocol.rs  worker_transfer.rs  xpsnr.rs
src/command/args/: encode.rs  vmaf.rs
src/command/crf_search/: decision.rs  err.rs
src/command/encode/: error.rs  lifecycle.rs  mod.rs  plan.rs  preflight.rs  progress.rs  report.rs  running.rs  sink.rs  spawner.rs  test_support.rs
src/command/sample_encode/: cache.rs  plan.rs  result.rs
src/process/: child.rs  managed.rs
src/process/managed/: test_support.rs
tests/: cli_compat.rs  cli_diagnostics.rs  worker_harness.rs
