[package]
name = "ab-av1"
version = "0.11.4"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2024"
rust-version = "1.89.0"
description = "AV1 encoding with fast VMAF sampling"
repository = "https://github.com/alexheretic/ab-av1"
keywords = ["av1", "vmaf"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.53"
async-stream = "0.3.5"
base64 = "0.22"
blake3 = "1.3.3"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.4.10"
console = "0.16"
dirs = "6"
fastrand = "2"
ffprobe = "0.4"
futures-util = "0.3.19"
humantime = "2.1"
indicatif = "0.18"
infer = { version = "0.19", default-features = false }
crc32fast = "1"
log = "0.4.21"
pin-project-lite = "0.2.16"
same-file = "1.0.6"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
shell-escape = "0.1.5"
sled = "0.34.7"
sysinfo = "0.30"
thiserror = "2"
ureq = { version = "2.12", default-features = false }
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.15", features = [
    "rt",
    "macros",
    "process",
    "fs",
    "net",
    "signal",
    "time",
] }
tokio-process-tools = "0.11.2"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

[profile.release]
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
allocation-counter = "0.8.1"
proptest = "1"
rstest = "0.24"
serial_test = "3"
test-case = "3"

[lints.rust]
unused_crate_dependencies = "deny"
